--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,5 +7,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - name: Build
-        run: python3 ./build-image.py
+        run: python ./build-image.py
